--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8000
+MONGO_URI = mongodb+srv://abrarmahabub:VividVoices@cluster0.ynzokfh.mongodb.net/VividVoices?retryWrites=true&w=majority&appName=Cluster0
