signup endpoint done (signup controller, JWT, DB, Model creation)

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=8000
 MONGO_URI = mongodb+srv://abrarmahabub:VividVoices@cluster0.ynzokfh.mongodb.net/VividVoices?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=Pni27kCcF0O3eBPXY4EWw+ao0tAWU4M8uduiWmI4xbU=
+NODE_ENV=development
